GNOME Bugzilla – Bug 791312
Find dialog should reverse-search on enter.
Last modified: 2017-12-17 21:40:11 UTC
Some time ago the find dialog changed from doing a reverse search by default to doing a forward search. This is not very useful as it will search though old commands before the most recent. It would be good to return this behaviour to the previous mode. Reproduction. 1. Open gnome-terminal 2. Run: yes | head 3. Open find dialog (Shortcut: <C-f>) 4. Type "y" then press Enter Expected behaviour: The most recent "y" was highlighted. Actual behaviour: The first "y" was highlighted. This is especially annoying with unlimited scrollback as the UI completely freezes until it has finished loading my scrollback and searching through it. Then I have to use the mouse to click the "Search for previous occurrence" button to find a recent result.
Created attachment 365661 [details] [review] Fix
Comment on attachment 365661 [details] [review] Fix Thanks!
Fixed.
Thanks!
You're welcome! :)