search: Make reverse the default direction

https://bugzilla.gnome.org/show_bug.cgi?id=791312